chaged the icon

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
 
     <!--icon-->
-    <link rel = "icon" href = "./assets/plant_icon.png">
+    <link rel = "icon" href = "./assets/plant.png">
     <title>Greeden Contact us</title>
 </head>
 <body>
