--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
 
     <!--icon-->
-    <link rel="icon" href="./assets/plant_icon.png">
+    <link rel="icon" href="./assets/plant.png">
     <title>Document</title>
 </head>
 
@@ -58,7 +58,7 @@
     <!--about us-->
     <section class="text-center">
         <h1 class="font-bold text-3xl mt-5">About Us</h1>
-        <p>This site for those who admire the beauty and harmony of nature</p>
+        <p class = "mx-5">This site for those who admire the beauty and harmony of nature</p>
         <div class=" md:flex block ">
             <div class="border border-black p-2 m-6 basis-1/3">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5}
@@ -243,9 +243,9 @@
     </section>
 
     <!--News letter-->
-    <section class="text-center">
-        <h1 class="text-3xl font-bold text-center mt-5">Join Letter</h1>
-        <p class="text-center text-gray-500">Signb up our email newspaper to get exclusive discounts, updatesm and more
+    <section class="text-center ">
+        <h1 class="text-3xl font-bold text-center mt-5 ">Join Letter</h1>
+        <p class="text-center text-gray-500 mx-5">Sign up our email newspaper to get exclusive discounts, updatesm and more
         </p>
         <input type="text" name="text" class="block border border-black mx-auto mt-4 p-2 focus:outline-none w-5/6">
         <button type="submit"
